traefik-rancher/rancher.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: default
spec:
  selector:
    app: rancher
  ports:
  - port: 80
    targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher
spec:
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
      - name: rancher
        image: rancher/hello-world
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: default 
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`web.spcn22.local`)
    kind: Rule
    services:
    - name: rancher
      port: 80
